# irona

./: .gitignore  EVAL.md  LICENSE  Makefile  PUSH_CHECKLIST.example.md  README.md  SECURITY.md  SHARE.md  config.example.yaml  install.sh  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  FEATURES.md  THE_LOCAL_GAP.md  TRUST.md  V04.md  WHATSAPP.md
eval/: paths.py  questions.template.jsonl  run_eval.py  run_gen_eval.py
eval/fixtures/corpus/: README.md  api-overview.md  meeting-notes.md
scripts/: init-user.sh  verify-push.sh
src/: __init__.py  chat.py  cli.py  config.py  intent.py  notes.py  policy.py  rag.py  retrieval.py  tools.py  voice.py
user/: README.md
